kubernetes/operators/rook-ceph/cluster/rgw-virtual-service.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.istio.io/virtualservice_v1beta1.json
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rook-ceph-rgw
  namespace: rook-ceph
  labels:
    app.kubernetes.io/part-of: rook-ceph
spec:
  hosts:
    - rook-s3.${SECRET_DOMAIN}
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: rook-ceph-rgw-ceph-objectstore
            port:
              number: 80
      headers:
        request:
          set:
            # Add CORS headers for S3 compatibility
            Access-Control-Allow-Origin: "*"
            Access-Control-Allow-Methods: "GET, PUT, POST, DELETE, HEAD"
            Access-Control-Allow-Headers: "Content-Type, Authorization, x-amz-date, x-amz-security-token"
