kubernetes/operators/rook-ceph/cluster/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rook
  namespace: rook-ceph
spec:
  hosts:
    - rook.${SECRET_DOMAIN}
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: rook-ceph-mgr-dashboard
            port:
              number: 7000
